--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-
 title: intrpr.info
-description: Course materials and research for sign language interpreting students and practitioners.
+description: Course materials and research for sign language interpreting students and practitioners
 baseurl: "/just-the-docs" # the subpath of your site, e.g. /blog
 url: "https://intrpr.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -37,36 +36,36 @@ exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "pac
 # Supports true (default) or false
 search_enabled: true
 search:
-  # Split pages into sections that can be searched individually
-  # Supports 1 - 6, default: 2
-  heading_level: 2
-  # Maximum amount of previews per search result
-  # Default: 3
-  previews: 2
-  # Maximum amount of words to display before a matched word in the preview
-  # Default: 5
-  preview_words_before: 3
-  # Maximum amount of words to display after a matched word in the preview
-  # Default: 10
-  preview_words_after: 3
-  # Set the search token separator
-  # Default: /[\s\-/]+/
-  # Example: enable support for hyphenated search words
-  tokenizer_separator: /[\s/]+/
-  # Display the relative url in search results
-  # Supports true (default) or false
-  rel_url: true
-  # Enable or disable the search button that appears in the bottom right corner of every page
-  # Supports true or false (default)
-  button: false
+	# Split pages into sections that can be searched individually
+	# Supports 1 - 6, default: 2
+	heading_level: 2
+	# Maximum amount of previews per search result
+	# Default: 3
+	previews: 2
+	# Maximum amount of words to display before a matched word in the preview
+	# Default: 5
+	preview_words_before: 3
+	# Maximum amount of words to display after a matched word in the preview
+	# Default: 10
+	preview_words_after: 3
+	# Set the search token separator
+	# Default: /[\s\-/]+/
+	# Example: enable support for hyphenated search words
+	tokenizer_separator: /[\s/]+/
+	# Display the relative url in search results
+	# Supports true (default) or false
+	rel_url: true
+	# Enable or disable the search button that appears in the bottom right corner of every page
+	# Supports true or false (default)
+	button: false
 
 # Enable or disable heading anchors
 heading_anchors: true
 
 # Aux links for the upper right navigation
-# aux_links:
-#   "Just the Docs on GitHub":
-#     - "//github.com/pmarsceill/just-the-docs"
+aux_links:
+	 "Just the Docs on GitHub":
+		 - "//github.com/pmarsceill/just-the-docs"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
@@ -107,19 +106,19 @@ ga_tracking: UA-XXXXXX-XX
 ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (true/nil by default)
 
 plugins:
-  - jekyll-seo-tag
+	- jekyll-seo-tag
 
 kramdown:
-  syntax_highlighter_opts:
-    block:
-      line_numbers: false
+	syntax_highlighter_opts:
+		block:
+			line_numbers: false
 
 compress_html:
-  clippings: all
-  comments: all
-  endings: all
-  startings: []
-  blanklines: false
-  profile: false
-  # ignore:
-  #   envs: all
+	clippings: all
+	comments: all
+	endings: all
+	startings: []
+	blanklines: false
+	profile: false
+	# ignore:
+	#   envs: all
