--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; 2017-2020 Patrick Marsceill. Distributed by an <a href=\"https://github.com/pmarsceill/just-the-docs/tree/master/LICENSE.txt\">MIT license.</a>"
+footer_content: "Copyright &copy; 1995-2021 Doug Stringham. This work is licensed under a <a href=\"https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode\">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 United States License</a>. This license grants you permission to share (copy, distribute, and transmit the work) and remix (to adapt the work) under certain conditions and understandings. This license does not apply, however, to work claimed by other authors and producers. Additionally, every intent has been made to make materials available via “Fair Use,” (§107 to 118, Title 17, US Code); the content and downloadable materials on the pages of this Web site are solely for the benefit of the students enrolled in these courses."
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
